--- a/package.json
+++ b/package.json
@@ -1,74 +1,74 @@
 {
-  "name": "dojo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "truffle-config.js",
-  "scripts": {
-    "start": "webpack serve",
-    "build": "webpack",
-    "dev": "webpack serve",
-    "compile": "npx truffle compile",
-    "migrate:dev": "npx truffle migrate --network develop",
-    "migrate:evmos": "npx truffle migrate --network evmos",
-    "migrate:tevmos": "npx truffle migrate --network tevmos",
-    "migrate:mumbai": "npx truffle migrate --network mumbai",
-    "migrate:polygon": "npx truffle migrate --network polygon",
-    "migrate:arbi": "npx truffle migrate --network arbitrum",
-    "migrate:arbirink": "npx truffle migrate --network arbitrinkeby",
-    "migrate:opti": "npx truffle migrate --network optimism",
-    "migrate:optikov": "npx truffle migrate --network optikovan",
-    "migrate:main": "npx truffle migrate --network main",
-    "migrate:rinkeby": "npx truffle migrate --network rinkeby",
-    "migrate:bsc": "npx truffle migrate --network bsc",
-    "migrate:chalen": "npx truffle migrate --network chalen",
-    "migrate:avax": "npx truffle migrate --network avax",
-    "migrate:fuji": "npx truffle migrate --network fuji",
-    "migrate:moonriver": "npx truffle migrate --network moonriver"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.16.7",
-    "@chainlink/contracts": "^0.4.0",
-    "@metamask/detect-provider": "^1.2.0",
-    "@openzeppelin/contracts": "^4.4.1",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "@truffle/hdwallet-provider": "^2.0.0",
-    "@uauth/js": "^1.1.0",
-    "accelerometer": "^1.2.0",
-    "bignumber": "^1.1.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "crypto-hash": "^2.0.1",
-    "dotenv": "^8.6.0",
-    "elliptic": "^6.5.4",
-    "ethers": "^5.5.2",
-    "gridjs": "^5.0.2",
-    "ipfs": "^0.62.3",
-    "ipfs-fetch": "^0.2.1",
-    "ipfs-http-client": "^55.0.0",
-    "mem": "^9.0.1",
-    "mocha": "^9.1.3",
-    "ncu": "^0.2.1",
-    "npm-check": "^5.9.2",
-    "parcel": "^2.5.0",
-    "pedometer": "^0.0.5",
-    "three": "^0.136.0",
-    "underscore": "^1.13.2",
-    "updtr": "^4.0.0",
-    "yargs": "^17.3.1",
-    "yargs-parser": "^21.0.0"
-  },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
-    "css-loader": "^6.5.1",
-    "hardhat": "^2.12.6",
-    "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.47.0",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
-  }
+	"name": "dojo",
+	"version": "1.0.0",
+	"description": "",
+	"main": "hardhat.config.js",
+	"scripts": {
+		"start": "webpack serve",
+		"build": "webpack",
+		"dev": "webpack serve",
+		"compile": "npx hardhat compile",
+		"deploy dev": "npx hardhat run scripts/deploy.js",
+		"deploy evmos": "npx hardhat run scripts/deploy.js --network evmos",
+		"deploy tevmos": "npx hardhat run scripts/deploy.js --network tevmos",
+		"deploy mumbai": "npx hardhat run scripts/deploy.js --network mumbai",
+		"deploy polygon": "npx hardhat run scripts/deploy.js --network polygon",
+		"deploy arbitrum": "npx hardhat run scripts/deploy.js --network arbitrum",
+		"deploy arbirinkeby": "npx hardhat run scripts/deploy.js --network arbitrinkeby",
+		"deploy optimism": "npx hardhat run scripts/deploy.js --network optimism",
+		"deploy optikovan": "npx hardhat run scripts/deploy.js --network optikovan",
+		"deploy mainnet": "npx hardhat run scripts/deploy.js --network mainnet",
+		"deploy goerli": "npx hardhat run scripts/deploy.js --network goerli",
+		"deploy bsc": "npx hardhat run scripts/deploy.js --network bsc",
+		"deploy chalen": "npx hardhat run scripts/deploy.js --network chalen",
+		"deploy avax": "npx hardhat run scripts/deploy.js --network avax",
+		"deploy fuji": "npx hardhat run scripts/deploy.js --network fuji",
+		"deploy moonriver": "npx hardhat run scripts/deploy.js --network moonriver"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"@babel/core": "^7.16.7",
+		"@chainlink/contracts": "^0.4.0",
+		"@metamask/detect-provider": "^1.2.0",
+		"@openzeppelin/contracts": "^4.4.1",
+		"@openzeppelin/test-helpers": "^0.5.15",
+		"@truffle/hdwallet-provider": "^2.0.0",
+		"@uauth/js": "^1.1.0",
+		"accelerometer": "^1.2.0",
+		"bignumber": "^1.1.0",
+		"copy-webpack-plugin": "^11.0.0",
+		"crypto-hash": "^2.0.1",
+		"dotenv": "^8.6.0",
+		"elliptic": "^6.5.4",
+		"ethers": "^5.5.2",
+		"gridjs": "^5.0.2",
+		"ipfs": "^0.62.3",
+		"ipfs-fetch": "^0.2.1",
+		"ipfs-http-client": "^55.0.0",
+		"mem": "^9.0.1",
+		"mocha": "^9.1.3",
+		"ncu": "^0.2.1",
+		"npm-check": "^5.9.2",
+		"parcel": "^2.5.0",
+		"pedometer": "^0.0.5",
+		"three": "^0.136.0",
+		"underscore": "^1.13.2",
+		"updtr": "^4.0.0",
+		"yargs": "^17.3.1",
+		"yargs-parser": "^21.0.0"
+	},
+	"devDependencies": {
+		"@nomicfoundation/hardhat-toolbox": "^2.0.1",
+		"css-loader": "^6.5.1",
+		"hardhat": "^2.12.6",
+		"html-webpack-plugin": "^5.5.0",
+		"sass": "^1.47.0",
+		"sass-loader": "^12.4.0",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.9.1",
+		"webpack-dev-server": "^4.7.2"
+	}
 }
