--- a/.env.conf
+++ b/.env.conf
@@ -9,7 +9,7 @@ ARBIRINK_URL=https://arbitrum-rinkeby.infura.io/v3/
 OPTI_URL=https://optimism-mainnet.infura.io/v3/
 OPTIKOV_URL=https://optimism-kovan.infura.io/v3/
 MAIN_URL=https://mainnet.infura.io/v3/
-RINKEBY_URL=https://rinkeby.infura.io/v3/
+GOERLIURL=https://goerli.infura.io/v3/
 FUJI_URL=https://nd-651-566-791.p2pify.com/ ... /ext/bc/C/rpc
 AVAX_URL=https://rpc.ankr.com/avalanche
 BSC_URL=https://rpc.ankr.com/bsc
